background canvas matrix animation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="in">
             <div class="description-of-logo active">CLICK HERE TO VISIT MORE</div>
             <div class="logo name">
-              <a class="pure-anchor homesite" href="<?php //echo $sett_web; ?>">
+              <a class="pure-anchor homesite" href="">
                 <span class="logo-letter">S</span>
                 <span class="logo-letter">A</span>
                 <span class="logo-letter">R</span>
@@ -64,7 +64,7 @@
               </a>
             </div>
             <div class="logo soft">
-              <a class="pure-anchor homesite" href="<?php //echo $sett_web; ?>">
+              <a class="pure-anchor homesite" href="">
                 <span class="logo-letter">S</span>
                 <span class="logo-letter">O</span>
                 <span class="logo-letter">F</span>
@@ -95,7 +95,8 @@
         :background-canvas-config="backgroundAnimation"
         :social-media-links="layout.content.socialMedia"
       >
-      <start-screen :content="layout.content"></start-screen>
+        <start-screen :content="layout.content"></start-screen>
+        
         <!--<photo-container :photos="photos"></photo-container>-->
       </main-theme>
     </div>
