change method of download gist content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   </head>
   <body>
-
+    <div id="h-box" class="hide-me"></div>
     <div id="loading-screen" class="active">
       <style>
         @import url(css/loading-screen.css);
