fixing visual behavior of action history display

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- content -->
         <div class="row">
           <!-- content -->
-          <aside  class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
+          <aside  class="d-none d-xl-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
             <span class="fs-5 fw-semibold">Last actions</span>
             <div id="first-module" class="list-group list-group-flush border-bottom scrollarea">
               <a :href="'https://github.com/'+event.repo.name" v-for="event in events" class="list-group-item list-group-item-action py-3 lh-sm">
